--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,49 @@
 node_modules
 wikipedia.app
+.DS_Store
+*.log
+*.env
+*.tmp
+*.bak
+*.swp
+*.cache
+*.pid
+*.tgz
+*.zip
+*.tar.gz
+*.tgz
+*.gz
+*.rar
+*.7z
+*.exe
+*.dll
+*.so
+*.dmg
+*.pkg
+*.deb
+*.rpm
+*.msi
+*.apk
+*.ipa
+*.war
+*.jar
+*.class
+*.swf
+*.pyc
+*.pyo
+*.pyd
+*.o
+*.obj
+*.a
+*.lib
+*.dll
+*.dylib
+*.so
+*.dSYM
+*.pdb
+*.idb
+*.suo
+*.user
+*.sln
+*.csproj
+*.vbproj
