--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
       - run: sudo npm install -g . --force
       - run: sudo apt install redis-server
       - run: sudo service redis-server start
-          #sudo npm start & # Start the server in the background
+      - run: sudo npm start & # Start the server in the background
           #qgjob submit --org-id=qualgent --app-version-id=xyz123 --test=tests/onboarding.spec.js
           #qgjob status --job-id=12345
   # To run the server in a separate runner or environment for testing you can uncomment the code below 
