--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,15 +5,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: node --version 
-      - run: npm --version 
-      - run: sudo npm install -g . --force
-      - run: sudo apt install redis-server
-      - run: sudo service redis-server start
-      - run: sudo npm start & # Start the server in the background
-          #qgjob submit --org-id=qualgent --app-version-id=xyz123 --test=tests/onboarding.spec.js
-          #qgjob status --job-id=12345
-  # To run the server in a separate runner or environment for testing you can uncomment the code below 
+      - run: | 
+          node --version 
+          npm --version 
+          sudo npm install -g . --force
+          sudo apt install redis-server
+          sudo service redis-server start
+          sudo npm start & # Start the server in the background
+          qgjob submit --org-id=qualgent --app-version-id=xyz123 --test=tests/onboarding.spec.js
+          qgjob status --job-id=12345
+  # To run server in a different environment for testing uncomment the code below 
   #   runs-on: ubuntu-latest
   #   steps:
   #     - uses: actions/checkout@v2
