--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
           sudo service redis-server start
           sudo npm start & # Start the server in the background
           qgjob submit --org-id=qualgent --app-version-id=xyz123 --test=tests/onboarding.spec.js
-          qgjob status --job-id=12345
+  # qgjob status --job-id=12345
   # To run server in a different environment for testing uncomment the code below 
   #   runs-on: ubuntu-latest
   #   steps:
